# ktorrent-htmlinterface-plugin

plugins/: CMakeLists.txt
plugins/htmlinterface/: CMakeLists.txt  htmlinterfacedialog.cpp  htmlinterfacedialog.h  htmlinterfaceplugin.cpp  htmlinterfaceplugin.h  index.html  torrentlistgenerator.cpp  torrentlistgenerator.h  webserver.cpp  webserver.h
plugins/htmlinterface/http/: CMakeLists.txt  httpserver.cpp  httpserver.h
plugins/htmlinterface/libhttpserver/: CMakeLists.txt
plugins/htmlinterface/libhttpserver/nbproject/: project.xml
plugins/htmlinterface/www/html/: CMakeLists.txt
